# gnatcoverage

./: .als.json  .check-formatting.py  .clang-format  .flake8  .gitattributes  .gitignore  .gitlab-ci.yml  .gitlab-dates.yaml  .gitreview  .pre-commit-config-ci.yaml  .pre-commit-config.yaml  LICENSE  README.md  mypy.ini  toto
doc/: Makefile  conf.py  index.rst  latex_preamble.inc
doc/gnatcov/: .gitignore  appendix.rst  bin_convert.rst  bin_gps.rst  bin_intro.rst  bin_limitations.rst  bin_traces.rst  bin_traces_convert.rst  bin_warning.rst  cons_checkpoints.rst  cons_sco_variations.rst  cons_traces.rst  consolidation.dot  consolidation.rst  convert_commandline.rst  cov_common_switches.rst  cov_metrics.rst  cov_object.rst  cov_rust.rst  cov_source.rst  disable_cov.rst  exemptions.rst  external_annotations.rst  fig_flow0.dot  fig_flow_compare.dot  fig_flow_integrated_instr.dot  fig_flow_srctraces.dot  gen_prjtrees.py  getting_started.rst  glossary.rst  gnatcov_bin_part.rst  gnatcov_part.rst  gpr.rst  gps.rst  integrated_instr.rst  nexus_5634.rst  prjtree.dot  run_commandline.rst  run_control.rst  run_prereq.rst  (+6 more)
doc/gnattest/: gnattest_part.rst
doc/integration/: integration_part.rst
env/: env.yaml
examples/integration/: Makefile  prj.gpr
qemu-r6588/: Makefile  Makefile.target  configure  cpu-exec.c  exec-all.h  qemu-char.c  qemu-decision_map.h  qemu-traces.c  qemu-traces.h  vl.c
qemu-r6588/hw/: boards.h  leon.c  ppc_prep.c  sun4m.c
qemu-r6588/linux-user/: main.c  mmap.c
qemu-r6588/target-sparc/: cpu.h  helper.c  machine.c  op_helper.c
qualification/: Makefile.common  dev.rsync  genbundle.py  genbundle.sh  qualification.md  setup.sh
qualification/index/: Makefile
qualification/plans/: Makefile  conf.py  couverture.sty  doc_introduction.tex  index.rst  sqap.tex  tqp.tex
qualification/qm/: README_FIRST  common_conf.py  env.py  genmodel.py  lrm_ref.txt  model.json  model.xml  qm_prolog.py  template.xml
qualification/scripts/: common_conf.py  logger.py
qualification/str/: conf.py  genrest.py
qualification/tor/: conf.py  genrest.py  proj_conf.py  tor.tex
tests/explore/: Makefile  actors.adb  actors.ads  controls.ads  explore.adb  geomaps.adb  geomaps.ads  links.adb  links.ads  overview.ads  queues.ads  robots-devices.adb  robots.adb  robots.ads  stacks.adb  stacks.ads  stations.adb  stations.ads  test_ports.adb  test_robots.adb  test_stacks.adb
tests/hello/: Makefile  b~hello.adb  b~hello.adb.xcov  b~hello.ads  b~hello.ali  c_io.c.xcov  hello  hello.adb  hello.adb.xcov  hello.ali  hello.trace  textio.adb.xcov  textio.ali
tests/hello-leon/: README  hello.adb  uart.adb  uart.ads
testsuite/: .gitignore  README  README.md  cleanisys.sh  cleanup.sh  facade.cfg  native-doA.adc  nexus_info.py  template.gpr  test_utils.py  testsuite.py  zfp-doA.adc
testsuite/OCOV/: tc.py
testsuite/Qualif/: content.rst  content.txt  extra.opt  keys.txt  qmconf.py  req_set.rst  set.txt
testsuite/REST/: __init__.py  rest.py
testsuite/SCOV/: __init__.py  harness.py  htc.py  instr.py  llvmutils.py  map.py  minicheck.py  report.py  sarif.py  spark.py  tc.py  tctl.py
testsuite/STR/: Makefile  conf.py  genrest.py  mkrest.sh
testsuite/SUITE/: __init__.py  cargo_utils.py  checkpointlib.py  context.py  control.py  cutils.py  dutils.py  gprutils.py  integrated_instr_utils.py  llvmutils.py  qdata.py  srctracelib.py  stream_decoder.py  tgen.py  tracelib.py  tutils.py  utils.py  vtree.py
testsuite/qreport/: Makefile  conf.py
testsuite/templates/: template.Makefile  template.Makefile_shared_lib  template.Makefile_static_lib
testsuite/tests/: gnatcov-run.py
tools/: HOWTO  README  known-problems  qemu-leon.diff
tools/docgenerator/: Makefile  docgen.gpr  jshelper.js  requirementFiles.txt  targetFiles.txt  test.html  (+1 more)
tools/gnatcov/trace_adapters/dynamorio/: CMakeLists.txt  Makefile  qtrace.c  qtrace.h
tools/gnatcov/trace_adapters/llvm_json/: .gitignore  CMakeLists.txt  Makefile  README.md  gnatcov_llvm_exporter.gpr
tools/gnatcov/trace_adapters/llvm_json/src/: main.cpp
tools/gnatcov/trace_adapters/valgrind/: Makefile  Makefile.am  README  README.md  cov_main.c  cov_traces.c  cov_traces.h
tools/gnatcov/trace_adapters/valgrind/coverage/: Makefile.coverage  cov_main.c  cov_traces.c
(+13688 files in other folders)
